[gd_scene load_steps=24 format=2]

[ext_resource path="res://GOL_controller/GlowCheckButton.gd" type="Script" id=1]
[ext_resource path="res://GOL_controller/CheckButtonSimulation.gd" type="Script" id=2]
[ext_resource path="res://addons/SliderLabel/SliderLabel.gd" type="Script" id=3]
[ext_resource path="res://GOL_controller/ButtonRandom.gd" type="Script" id=4]
[ext_resource path="res://GOL_controller/GridCheckButtonSimulation.gd" type="Script" id=5]
[ext_resource path="res://GOL_controller/HSliderSpeed.gd" type="Script" id=6]
[ext_resource path="res://main/HUD.gd" type="Script" id=7]
[ext_resource path="res://GOL_controller/LoadBitmapButton.gd" type="Script" id=8]
[ext_resource path="res://GOL_controller/PenTypeOptionButton.gd" type="Script" id=9]
[ext_resource path="res://GOL_controller/ZoneRulesMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://GOL_controller/ButtonClear.gd" type="Script" id=11]
[ext_resource path="res://GOL_controller/ButtonStep.gd" type="Script" id=12]
[ext_resource path="res://themes/DarkTheme/Dark.theme" type="Theme" id=13]
[ext_resource path="res://GOL_controller/FillSlider.gd" type="Script" id=14]
[ext_resource path="res://GOL_controller/PenSizeHSlider.gd" type="Script" id=15]
[ext_resource path="res://GOL_controller/PenOpacityHSlider.gd" type="Script" id=16]
[ext_resource path="res://GOL_controller/InfectedColorPickerButton.gd" type="Script" id=17]
[ext_resource path="res://GOL_controller/InfectedSpreadHSlider.gd" type="Script" id=18]
[ext_resource path="res://GOL_controller/BitmapFileDialog.gd" type="Script" id=19]
[ext_resource path="res://main/GOLPresetsOptionButton.gd" type="Script" id=20]
[ext_resource path="res://main/LabelFPS.gd" type="Script" id=21]
[ext_resource path="res://main/HelpPopupDialog.gd" type="Script" id=22]
[ext_resource path="res://main/HelpRichTextLabel.gd" type="Script" id=23]

[node name="GOLController" type="Control"]
anchor_bottom = 1.0
margin_right = 400.0
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
margin_right = 380.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/ScrollContainer"]
margin_right = 380.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="LabelFPS" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 14.0
hint_tooltip = "Frames per second, newb"
text = "FPS"
script = ExtResource( 21 )

[node name="PresetHBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 380.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PresetHBoxContainer"]
margin_top = 3.0
margin_right = 188.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Preset"

[node name="GOLPresetsOptionButton" type="OptionButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PresetHBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
hint_tooltip = "Select a preset scene"
size_flags_horizontal = 3
script = ExtResource( 20 )

[node name="CenterCameraButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 380.0
margin_bottom = 64.0
text = "Center camera"

[node name="ShowHelpButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 380.0
margin_bottom = 89.0
text = "Show help"

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 380.0
margin_bottom = 98.0

[node name="PauseHBoxContainer" type="GridContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 103.0
margin_right = 380.0
margin_bottom = 251.0
hint_tooltip = "Run the simulation [P]"
columns = 2

[node name="LabelPaused" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_top = 13.0
margin_right = 188.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Simulation"

[node name="CheckButtonSimulation" type="CheckButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 40.0
size_flags_horizontal = 3
pressed = true
script = ExtResource( 2 )

[node name="GridLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_top = 57.0
margin_right = 188.0
margin_bottom = 71.0
text = "Grid"

[node name="GridCheckButton" type="CheckButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_left = 192.0
margin_top = 44.0
margin_right = 380.0
margin_bottom = 84.0
pressed = true
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_top = 101.0
margin_right = 188.0
margin_bottom = 115.0
text = "Glow"

[node name="GlowCheckButton" type="CheckButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_left = 192.0
margin_top = 88.0
margin_right = 380.0
margin_bottom = 128.0
script = ExtResource( 1 )

[node name="LabelSpeed" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_top = 133.0
margin_right = 188.0
margin_bottom = 147.0
hint_tooltip = "Number of simulation steps per second (maximum possible is your current FPS times 2)"
text = "Speed"

[node name="HSliderSpeed" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer"]
margin_left = 192.0
margin_top = 132.0
margin_right = 380.0
margin_bottom = 148.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 120.0
value = 60.0
ticks_on_borders = true
script = ExtResource( 6 )

[node name="SliderLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/HSliderSpeed"]
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="ButtonStep" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 256.0
margin_right = 380.0
margin_bottom = 276.0
hint_tooltip = "Make a step in the simulation [S]"
text = "Step"
script = ExtResource( 12 )

[node name="FillHBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 281.0
margin_right = 380.0
margin_bottom = 301.0

[node name="FillButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer"]
margin_right = 188.0
margin_bottom = 20.0
hint_tooltip = "Just give it a try [F]"
size_flags_horizontal = 3
text = "Fill"
script = ExtResource( 4 )

[node name="FillSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 0.001
max_value = 1.0
step = 0.001
value = 0.5
exp_edit = true
script = ExtResource( 14 )

[node name="SliderLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="ButtonClear" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 306.0
margin_right = 380.0
margin_bottom = 326.0
hint_tooltip = "Clear the surface (aka kill all cells, you psycho) [C]"
text = "Clear"
script = ExtResource( 11 )

[node name="LoadBitmapButton" type="Button" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 331.0
margin_right = 380.0
margin_bottom = 351.0
hint_tooltip = "Doesn't work in the browser"
text = "Load bitmap..."
script = ExtResource( 8 )

[node name="BitmapFileDialog" type="FileDialog" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/LoadBitmapButton"]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 170, 59.5 )
window_title = "Open a File"
mode = 0
access = 2
filters = PoolStringArray( "*.png" )
script = ExtResource( 19 )

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 380.0
margin_bottom = 360.0

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 365.0
margin_right = 380.0
margin_bottom = 379.0
text = "Brush parameters"
align = 1

[node name="GridBoxContainer" type="GridContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 384.0
margin_right = 380.0
margin_bottom = 444.0
columns = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_top = 1.0
margin_right = 188.0
margin_bottom = 15.0
hint_tooltip = "Radius of the brush (turn down to 1 for pixel-perfect drawing)"
size_flags_horizontal = 3
text = "Size"

[node name="PenSizeHSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
script = ExtResource( 15 )

[node name="SliderLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme = ExtResource( 13 )
theme_type_variation = "SliderLabel"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="Label2" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_top = 21.0
margin_right = 188.0
margin_bottom = 35.0
hint_tooltip = "What portion of cells will be drawn alive"
text = "Opacity"

[node name="PenOpacityHSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_left = 192.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 36.0
size_flags_horizontal = 3
min_value = 0.1
max_value = 1.0
step = 0.1
value = 0.1
script = ExtResource( 16 )

[node name="SliderLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="Label3" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_top = 43.0
margin_right = 188.0
margin_bottom = 57.0
text = "Cells type"

[node name="PenTypeOptionButton" type="OptionButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer"]
margin_left = 192.0
margin_top = 40.0
margin_right = 380.0
margin_bottom = 60.0
hint_tooltip = "Select what type of cells to draw:
Alive [A]
Dead [D]
Infected [I]"
text = "Alive"
items = [ "Alive", null, false, 1, null, "Dead", null, false, 0, null, "Infected", null, false, 2, null ]
selected = 0
script = ExtResource( 9 )

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 449.0
margin_right = 380.0
margin_bottom = 453.0

[node name="ZonesRulesTabContainer" type="TabContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer"]
margin_top = 458.0
margin_right = 380.0
margin_bottom = 594.0
hint_tooltip = "Modify properties of zones and types of cells"

[node name="Zone 1" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer" instance=ExtResource( 10 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Zone 2" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 31.0
margin_right = -4.0
margin_bottom = -4.0
zone = 1

[node name="Infection" type="PanelContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer"]
visible = false
margin_right = 4.0
margin_bottom = 4.0

[node name="VBoxContainer" type="GridContainer" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection"]
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 25.0
columns = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer"]
margin_right = 33.0
margin_bottom = 25.4
hint_tooltip = "Color of living infected cells"
mouse_filter = 1
text = "Color"

[node name="InfectedColorPickerButton" type="ColorPickerButton" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer"]
margin_right = 12.0
margin_bottom = 23.0
size_flags_horizontal = 3
script = ExtResource( 17 )

[node name="Label2" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer"]
margin_right = 64.0
margin_bottom = 25.4
text = "Infectivity"

[node name="InfectedSpreadHSlider" type="HSlider" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer"]
margin_right = 40.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.5
script = ExtResource( 18 )

[node name="SliderLabel" type="Label" parent="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedSpreadHSlider"]
margin_right = 24.0
margin_bottom = 14.0
size_flags_horizontal = 4
theme_type_variation = "SliderLabel"
text = "100"
align = 1
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_initialized_": true
}

[node name="HelpPopupDialog" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( -1554, 149 )
theme = ExtResource( 13 )
script = ExtResource( 22 )

[node name="HelpRichTextLabel" type="RichTextLabel" parent="HelpPopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center][rainbow freq=.4 sat=1 val=20]Useful info here vvv[/rainbow][/center]

[b]Steps for having FUN:[/b]
1. Don't follow any steps
2. Try out all the buttons (read the tooltips)
3. Try out all the presets
4. Start playing around with the rules, test each rule set in many ways (e.g. drawing with different brush sizes, random fill, erasing)

[b]Mouse controls:[/b]
- Pan with left click
- Draw cells with right click
- Zoom in with mouse wheel

[b]Features:[/b]
- Modifiable [url=https://en.wikipedia.org/wiki/Life-like_cellular_automaton]game rules[/url]
- Modifiable colors 
- Two zones with separate rules and colors
- \"Infected\" cells that spread like a virus
- Surface wraps around
- Presets with various zone bitmaps
- Toggle-able grid
- Glow [i]uwu[/i]"
text = "Useful info here vvv

Steps for having FUN:
1. Don't follow any steps
2. Try out all the buttons (read the tooltips)
3. Try out all the presets
4. Start playing around with the rules, test each rule set in many ways (e.g. drawing with different brush sizes, random fill, erasing)

Mouse controls:
- Pan with left click
- Draw cells with right click
- Zoom in with mouse wheel

Features:
- Modifiable game rules
- Modifiable colors 
- Two zones with separate rules and colors
- \"Infected\" cells that spread like a virus
- Surface wraps around
- Presets with various zone bitmaps
- Toggle-able grid
- Glow uwu"
fit_content_height = true
script = ExtResource( 23 )

[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/GridCheckButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/GlowCheckButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/HSliderSpeed" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ButtonStep" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ButtonClear" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/LoadBitmapButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenTypeOptionButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Zone 1" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Zone 2" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedColorPickerButton" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="." to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedSpreadHSlider" method="_on_GOLController_GOL_changed"]
[connection signal="GOL_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/PresetHBoxContainer/GOLPresetsOptionButton" to="." method="_on_GOLPresetsOptionButton_GOL_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/PresetHBoxContainer/GOLPresetsOptionButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PresetHBoxContainer/GOLPresetsOptionButton" method="_on_GOLPresetsOptionButton_item_selected"]
[connection signal="button_down" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/CenterCameraButton" to="." method="_on_CenterCameraButton_button_down"]
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/ShowHelpButton" to="HelpPopupDialog" method="_on_ShowHelpButton_pressed"]
[connection signal="toggled" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/CheckButtonSimulation" method="_on_CheckButtonSimulation_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/GridCheckButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/GridCheckButton" method="_on_GridCheckButton_toggled"]
[connection signal="toggled" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/GlowCheckButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/GlowCheckButton" method="_on_GlowCheckButton_toggled"]
[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/HSliderSpeed" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/PauseHBoxContainer/HSliderSpeed" method="_on_HSliderSpeed_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/ButtonStep" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ButtonStep" method="_on_ButtonStep_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillButton" method="_on_FillButton_pressed"]
[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/FillHBoxContainer/FillSlider" method="_on_FillSlider_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/ButtonClear" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ButtonClear" method="_on_ButtonClear_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/LoadBitmapButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/LoadBitmapButton/BitmapFileDialog" method="_on_LoadBitmapButton_pressed"]
[connection signal="file_selected" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/LoadBitmapButton/BitmapFileDialog" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/LoadBitmapButton" method="_on_BitmapFileDialog_file_selected"]
[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenSizeHSlider" method="_on_PenSizeHSlider_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenOpacityHSlider" method="_on_PenOpacityHSlider_value_changed"]
[connection signal="item_selected" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenTypeOptionButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/GridBoxContainer/PenTypeOptionButton" method="_on_PenTypeOptionButton_item_selected"]
[connection signal="color_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedColorPickerButton" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedColorPickerButton" method="_on_InfectedColorPickerButton_color_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedSpreadHSlider" to="Panel/MarginContainer/ScrollContainer/VBoxContainer/ZonesRulesTabContainer/Infection/VBoxContainer/InfectedSpreadHSlider" method="_on_InfectedSpreadHSlider_value_changed"]
[connection signal="meta_clicked" from="HelpPopupDialog/HelpRichTextLabel" to="HelpPopupDialog/HelpRichTextLabel" method="_on_HelpRichTextLabel_meta_clicked"]
